# proyecto5-grupo3

./: .env  .env.template  INSTRUCTIVO.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  jupytext.toml  pyproject.toml
backend/data/processed/: README.md  telco_customer_churn_clean.csv
backend/data/raw/: README.md
backend/ml/: MODEL_SELECTION.md  file.py  metrics_gradient_boosting.json  metrics_logistic_regression.json  metrics_random_forest.json  metrics_xgboost.json  model_gradient_boosting.pkl  model_logistic_regression.pkl  model_xgboost.pkl  predict.py  selector.py  threshold_random_forest.json  train_gradient_boosting.py  train_random_forest.py  train_xgboost.py  tune_threshold.py
backend/notebooks/: 01_preprocessing.ipynb  01_preprocessing.py  02_exploratory.py  03_modeling_random_forest.py  04_modeling_xgboost.py  05_modeling_gradient_boosting.py  06_modeling_logistic_regression.py
backend/src/: main.py
backend/src/api/db/: config.py  models.py  session.py
backend/src/controllers/: admin.py  prediction.py
backend/src/database/: connection.py
backend/src/db/: load_raw.py
backend/src/models/: admin.py  models_registry.py  prediction.py
backend/src/schemas/: file.py  prediction.py
docs/: index.html
docs/assets/: index-DYZbACzu.css
frontend/: .env  .env.template  Dockerfile  package-lock.json  package.json
frontend/docs/assets/: index-DR2cu2_Z.css
frontend/src/: App.css  App.tsx  ChurnApp.tsx  GuardApp.tsx  main.tsx
frontend/src/lib/: churn-model.ts
frontend/src/pages/: Dashboard.tsx
(+26 files in other folders)
