[project]
name = "backend"
version = "0.1.0"
description = "monorepo backend: proyecto5-grupo3"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupytext>=1.19.4",
]
