[project]
name = "backend"
version = "0.1.0"
description = "monorepo backend: proyecto5-grupo3"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.50.2",
    "sqlalchemy>=2.0.51",
    "psycopg2-binary>=2.9.12",
    "joblib>=1.5.3",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupytext>=1.19.4",
    "notebook>=7.6.0",
]
